--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "normalize.css": "^8.0.1",
+    "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.0",
     "pinia": "^2.0.13",
     "sass": "^1.50.0",
@@ -43,7 +44,7 @@
     "@types/js-cookie": "^2.2.6",
     "@types/jsdom": "^16.2.14",
     "@types/morgan": "^1.9.2",
-    "@types/node": "^16.11.26",
+    "@types/node": "^16.11.36",
     "@types/yamljs": "^0.2.31",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.9",
