--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@vue/test-utils": "^2.0.0-rc.18",
     "@vue/tsconfig": "^0.1.3",
     "concurrently": "^6.0.0",
+    "consola": "^2.15.3",
     "cypress": "^9.5.3",
     "eslint": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -68,6 +69,9 @@
     "unplugin-auto-import": "^0.7.0",
     "unplugin-vue-components": "^0.19.2",
     "vite": "^2.9.1",
+    "vite-plugin-components": "^0.13.3",
+    "vite-plugin-style-import": "^2.0.0",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vitest": "^0.8.1",
     "vue-cli-plugin-style-resources-loader": "^0.1.5",
     "vue-tsc": "^0.33.9"
