--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "composite": true,
     "lib": [],
+    "preserveValueImports": false,
     "paths": {
       "@/*": [ "src/*" ]
     },
