--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "vue": "^3.2.31",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.14",
+    "vxe-table": "^4.2.4",
+    "xe-utils": "^3.5.4",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
@@ -59,6 +61,8 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^8.2.0",
     "jsdom": "^19.0.0",
+    "less": "^4.1.2",
+    "less-loader": "^11.0.0",
     "node-sass": "^7.0.1",
     "prettier": "^2.5.1",
     "sass-loader": "^12.6.0",
